--- a/src/styles/draggable.css
+++ b/src/styles/draggable.css
@@ -1,8 +1,9 @@
 .draggable-dialog {
   position: fixed !important;
-  top: 10% !important;
+  top: 20% !important;
   left: 50% !important;
   transform: translateX(-50%) !important;
+  margin: 0 !important;
 }
 
 .drag-handle {
